--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,24 @@
 		<input type="text" id="code">
 		<button id="join" class="btn">Join Room</button>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
-	<script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
-	<script src="lobby.js"></script>
+
 	<div id="lobby" hidden>
 		<h1 id="nick"></h1>
 		<p id="info">Kľudne sa usaďte a pripravte sa na hru</p>
-		<h1 hidden id="countdown"></h1>
 		<div id="quest" hidden>
 			<p id="otazka"></p>
 		</div>
 	</div>
+
+	<div id="textTask" hidden>
+		<h3>Meme This!</h3>
+		<input type="text" id="meme_text">
+		<button type="submit" id="meme_button">Submit </button>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
+	<script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
+	<script src="lobby.js"></script>
 </body>
 </html>
