--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
 		<button type="submit" id="meme_button">Submit </button>
 	</div>
 
+	<div id="pickAnswerTask" hidden>
+		<h3>Vyberte jeden z listu</h3>
+		<ul id="answers_pick">
+		</ul>
+	</div>
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
 	<script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
