--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
 
 	<div id="pickAnswerTask" hidden>
 		<h3>Vyberte jeden z listu</h3>
+		<p>Vyberte si najvtipnejšiu odpoveď.</p>
 		<ul id="answers_pick">
 		</ul>
 	</div>
