--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
 	<div id="pickAnswerTask" hidden>
 		<h3>Vyberte jeden z listu</h3>
 		<p>Vyberte si najvtipnejšiu odpoveď.</p>
-		<ul id="answers_pick">
-		</ul>
+		<div id="answers_pick">
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
