--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,21 @@
 		<button id="join" class="btn">Join Room</button>
 	</div>
 
-	<div id="lobby" hidden>
+	<div id="lobby" class="d-none">
 		<h1 id="nick"></h1>
 		<p id="info">Kľudne sa usaďte a pripravte sa na hru</p>
-		<div id="quest" hidden>
+		<div id="quest" class=".d-none">
 			<p id="otazka"></p>
 		</div>
 	</div>
 
-	<div id="textTask" hidden>
+	<div id="textTask" class="d-none">
 		<h3>Meme This!</h3>
 		<input type="text" id="meme_text">
 		<button type="submit" id="meme_button">Submit </button>
 	</div>
 
-	<div id="pickAnswerTask" hidden>
+	<div id="pickAnswerTask" class="d-none">
 		<h3>Vyberte jeden z listu</h3>
 		<p>Vyberte si najvtipnejšiu odpoveď.</p>
 		<div id="answers_pick">
@@ -41,5 +41,26 @@
 	<script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
 	<script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
 	<script src="lobby.js"></script>
+
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLabel"></h5>
+	      </div>
+	      <div class="modal-body">
+	      Hra neexistuje, alebo ste zadali chybný kód.
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="location.reload(true);">Vrátiť sa späť</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
