Preparing for design update

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>HI</title>
+	<title>Ludum - hra plná zábavy</title>
 </head>
 <body>
 	<div class="start">
