--- a/public/Game/play.html
+++ b/public/Game/play.html
@@ -6,12 +6,12 @@
 	<title>Game Lobby</title>
 	<link rel="stylesheet" href="">
 </head>
-<body>
+<body style="padding: 0; margin: 0;">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
     <script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
     <script src="game.js"></script>
-    <script src="lobby.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
