--- a/public/index.html
+++ b/public/index.html
@@ -42,20 +42,22 @@
 	<script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
 	<script src="lobby.js"></script>
 
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <h5 class="modal-title" id="exampleModalLabel"></h5>
-	      </div>
-	      <div class="modal-body">
-	      Hra neexistuje, alebo ste zadali chybný kód.
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="location.reload(true);">Vrátiť sa späť</button>
-	      </div>
-	    </div>
-	  </div>
+	<div data-controls-modal="exampleModal" data-backdrop="static" data-keyboard="false" href="">
+		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="exampleModalLabel"></h5>
+		      </div>
+		      <div class="modal-body">
+		      Hra neexistuje, alebo ste zadali chybný kód.
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="location.reload(true);">Vrátiť sa späť</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
 	</div>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
