--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Ludum - hra plná zábavy</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 	<div class="start">
@@ -12,7 +14,7 @@
 		<label>Nick</label>
 		<input type="text" id="name" value="MattJoke"><br>
 		<label>Room code</label>
-		<input type="text" id="code">
+		<input type="text" id="code" class="text-uppercase">
 		<button id="join" class="btn">Join Room</button>
 	</div>
 
@@ -37,6 +39,13 @@
 		</div>
 	</div>
 
+	<div id="roleTask" class="d-none">
+		<h4>Tvoja rola je:</h4>
+		<div id="role">
+		</div>
+		<p id="description" class="text-justify"></p>
+	</div>
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
 	<script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
@@ -59,8 +68,6 @@
 		  </div>
 		</div>
 	</div>
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
