Changes on front end

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
 
 	<div id="roleTask" class="d-none">
 		<h4>Tvoja rola je:</h4>
+		<input type="checkbox" id="btn_role">
+	</div>
+	<div id="roleContent" class="d-none">
 		<div id="role">
 		</div>
 		<p id="description" class="text-justify"></p>
