--- a/public/Game/index.html
+++ b/public/Game/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>LUDUM - hra plná zábavy</title>
-	<script src="https://unpkg.com/cookie_js@1.2.2/cookie.min.js"></script>
-    <script src="https://unpkg.com/socket.io-client@2/dist/socket.io.slim.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+	<script src="../scripts/js.cookie.js"></script>
+    <script src="../scripts/socket.io.slim.js"></script>
+	<script src="../scripts/jquery-3.3.1.min.js"></script>
+	<script src="../scripts/p5.min.js"></script>
 </head>
 <body style="width:  100%;  height: 100%; margin: 0px; overflow: hidden;">
 	<script src="SceneManager.js" type="text/javascript" charset="utf-8"></script>
