Finished Hands Task

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 	<title>Ludum - hra plná zábavy</title>
 	<link rel="stylesheet" href="../scripts/bootstrap.min.css">
 </head>
@@ -26,10 +26,9 @@
 		</div>
 	</div>
 
-	<div id="textTask" class="d-none">
-		<h3>Meme This!</h3>
-		<input type="text" id="meme_text">
-		<button type="submit" id="meme_button">Submit </button>
+	<div id="HandsPointTask" class="d-none">
+		<h3>Tvoja úloha znie</h3>
+		<p id="task"></p>
 	</div>
 
 	<div id="Voting" class="d-none">
