--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 	<title>Ludum - hra plná zábavy</title>
 	<link rel="stylesheet" href="../scripts/bootstrap.min.css">
+	<link rel="stylesheet" href="scripts/css.css">
 </head>
 <body>
 	<div class="start">
@@ -40,7 +41,7 @@
 
 	<div id="roleTask" class="d-none">
 		<h4>Tvoja rola je:</h4>
-		<input type="checkbox" id="btn_role">
+		<input type="checkbox" class="switch" id="btn_role">
 	</div>
 	<div id="roleContent" class="d-none">
 		<div id="role">
