--- a/public/Client/index.html
+++ b/public/Client/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
 
+	<div class="bg"></div>
+
 	<div class="start jumbotron text-center">
 		<h1 class="display-3">Vitajte!</h1>
 		<div class="row">
-			<div class="col-2 mx-auto">
+			<div class="col-xs-2 mx-auto">
 				<label>Prezývka</label>
 				<input type="text" id="name" value="MattJoke"class="form-control"><br>
 				<label>Kód miestnosti</label>
-				<input type="text" id="code" class="text-uppercase form-control" autocomplete="off"><br>
+				<input type="text" id="code" class="text-uppercase form-control" autocomplete="off" ><br>
 				<hr class="my-2">
 			</div>
 		</div>
