--- a/public/Client/index.html
+++ b/public/Client/index.html
@@ -10,9 +10,6 @@
 	<link rel="stylesheet" href="../scripts/style.css">
 </head>
 <body>
-
-	<div class="bg"></div>
-
 	<div class="start jumbotron text-center">
 		<h1 class="display-3">Vitajte!</h1>
 		<div class="row">
@@ -31,7 +28,7 @@
 	</div>
 
 
-	<div class="nick text-center d-none">
+	<div class="nick text-center mb-1 d-none">
 		<nav class="navbar static-top navbar-dark center text-light bg-dark" style="z-index: 1;">
 			<p class="display-4" id="nick"></p>
 		</nav>
@@ -48,7 +45,7 @@
 	</div>
 
 	<div id="HandsPointTask" class="text-center d-none">
-		<h3>Tvoja úloha znie</h3>
+		<h3 class="lead">Tvoja úloha znie</h3>
 		<p id="task"></p>
 	</div>
 
@@ -59,11 +56,11 @@
 		</div>
 	</div>
 
-	<p id="thanks" class="text-center d-none">Ďakujem za tvoju odpoveď</p>
+	<p id="thanks" class="lead text-center d-none">Ďakujem za tvoju odpoveď</p>
 
 	<div id="roleTask" class="text-center d-none">
 		<h4>Tvoja rola je</h4>
-		<p class="mx-auto">Ukáž rolu</p>
+		<p class="lead mx-auto">Ukáž rolu</p>
 
 		<div class="make-switch" data-off-text="Ukáž" data-on-text="Skry">
     		<input type="checkbox" unchecked class="probeProbe" />
