--- a/public/Client/index.html
+++ b/public/Client/index.html
@@ -63,7 +63,7 @@
 		<p class="lead mx-auto">Ukáž rolu</p>
 
 		<div class="make-switch" data-off-text="Ukáž" data-on-text="Skry">
-    		<input type="checkbox" unchecked class="probeProbe" />
+    		<input type="checkbox" unchecked class="probeProbe"/>
 		</div>
 	</div>
 
@@ -71,6 +71,18 @@
 		<div id="role" class="text-center">
 		</div>
 		<p id="description" class="text-center mx-auto"></p>
+	</div>
+
+	<div class="text-center d-none" id="duel">
+		<div id="question"></div>
+		<div class="row mr-0 ml-0">
+			<div class="col-xs-2 mx-auto">
+				<input type="text" class="form-control" autocomplete="off" id="Answer">
+			</div>
+			<div class="col-xs-1">
+				<button type="submit" class="btn" id="submit">Odošli</button>
+			</div>
+		</div>
 	</div>
 
 	<script src="../scripts/jquery-3.3.1.min.js"></script>
