--- a/public/Host/index.html
+++ b/public/Host/index.html
@@ -8,6 +8,7 @@
     <script src="../scripts/socket.io.slim.js"></script>
 	<script src="../scripts/jquery-3.3.1.min.js"></script>
 	<script src="../scripts/p5.min.js"></script>
+	<script src="../scripts/p5.sound.min.js"></script>
 </head>
 <body style="width:  100%;  height: 100%; margin: 0px; overflow: hidden;">
 	<script src="SceneManager.js" type="text/javascript" charset="utf-8"></script>
