Little design changes on Main Page

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			  <ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-				  <a class="nav-link" href="#">Čo to je?</a>
+				  <a class="nav-link" href="#information">Ako hrať?</a>
 				</li>
 				<li class="nav-item">
 						<a class="nav-link" href="#">Technológie</a>
@@ -32,7 +32,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Pripravujeme</a>
-				</li>	  
+				</li>	 
 			  </ul>
 			</div>
 		  </nav>
@@ -46,7 +46,7 @@
 			
 			<div id="host">
 				<p class="lead mt-2">Hostuj hru</p>
-				<div class="alert alert-info ml-1 mr-1" role="alert">
+				<div class="alert alert-info" role="alert">
 					Pre najlepší zážitok odporúčame hru hrať na počítači alebo tablete.
 				</div>
 				<input class="btn btn-large" type="button" onclick="window.location.href = '../game'" value="Hostovať hru"></input>
@@ -54,9 +54,9 @@
 		</div>
 	</div>
 
-	<nav class="navbar fixed-bottom navbar-dark bg-primary" id="footer">
+	<nav class="navbar navbar-dark bg-primary" id="footer">
 		<p class="text-center my-auto" id="create">Chcete vytvoriť miestnosť?</p>
 		<a class="navbar-brand" href="/Host">Vytvoriť hru</a>
 	</nav>
-</body>
+	</body>
 </html>
