Main Page changes

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			  <ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-				  <a class="nav-link" href="#information">Ako hrať?</a>
+				  <a class="nav-link" href="#information">Čo to je?</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link" href="#">Technológie</a>
+						<a class="nav-link" href="#howto">Ako hrať</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="#">Kód</a>
+				  <a class="nav-link" href="#">Technológie</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Pripravujeme</a>
@@ -37,7 +37,7 @@
 			</div>
 		  </nav>
 
-	<div class="row mt-6" id="title">
+	<div class="row" id="title">
 		<div class="text-center mx-auto">
 			<p class="display-1">LUDUM</p>
 			<p class="display-4">web hra plná zábavy</p>
@@ -58,5 +58,48 @@
 		<p class="text-center my-auto" id="create">Chcete vytvoriť miestnosť?</p>
 		<a class="navbar-brand" href="/Host">Vytvoriť hru</a>
 	</nav>
+
+	<div class="row text-center bg-dark text-light pb-5" id="information">
+		<div class="title">
+			<p class="display-2">
+				Kto ukradol diamant?
+			</p>
+		</div>
+		<div class="subtitle lead pl-5">
+			<blockquote class="blockquote">
+				<p class="mb-0">"...Dňa 14. februára bol ukradnutý diamant z národného múzea, jeho cena je viac ako 1 000 000 eur..."</p>
+				<footer class="blockquote-footer text-light">Spravodajstvo novín
+					<cite title="Dobrý deň">Dobrý deň</cite>
+				</footer>
+				<p>Pomôžte Detektívovi Ludumovi nájsť zlodeja. Ale pozor! Zlodejom môže byť hocikto!</p>
+			</blockquote>
+			<br>
+			<p>Ludum je lokálne online multiplayerová hra, ktorej cieľom je spojiť slovné hry a moderné technológie. <br> Táto hra vznikla ako práca pre Stredoškolskú odbornú činnosť v školskom roku 2018/2019.</p>
+		</div>
+	</div>
+	
+	<div class="row text-center bg-light pb-5" id="howto">
+			<div class="title">
+				<p class="display-2">
+					Ako hrať
+				</p>
+			</div>
+			<div class="subtitle lead pl-3">
+				<p>Potrebné veci:</p>
+				<ul class="list-group">
+					<li class="list-group-item">Mobilný telefón pre každého hráča</li>
+					<li class="list-group-item">Počítač/tablet</li>
+					<li class="list-group-item">Minimálne 2 kamarátov</li>
+				</ul>
+				<br>
+				
+			</div>
+		</div>
+
+		
+		<!--Added progress bar-->
+		<div class="progress">
+				<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+		</div>
 	</body>
 </html>
