--- a/public/Client/index.html
+++ b/public/Client/index.html
@@ -15,7 +15,7 @@
 		<div class="row" id="inputs">
 			<div class="col-xs-2 mx-auto">
 				<label>Prezývka</label>
-				<input type="text" id="name" class="form-control"><br>
+				<input type="text" id="name" class="form-control" autocomplete="off"><br>
 				<label>Kód miestnosti</label>
 				<input type="text" id="code" class="text-uppercase form-control" autocomplete="off" ><br>
 				<hr class="my-2">
