Added UPJS logo

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
 
 	<div class="row text-center bg-dark text-light pb-5" id="information">
 		<div class="title">
-			<p class="display-2">
-				Kto ukradol diamant?
+			<p class="display-5">
+				"...Dňa 14. februára bol ukradnutý diamant z národného múzea, jeho cena je viac ako 1 000 000 eur..."
 			</p>
 		</div>
 		<div class="subtitle lead pl-5">
