--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@
 		</div>
 		
 		<div class="row bg-light  text-dark"></div>
-			<div class="container text-center pb-5" id="technológie">
+			<div class="container text-center pb-5" id="pripravujeme">
 					<p class="display-4">
 						Pripravujeme
 					</p>
